@@ -1,3 +1,11 @@
+2001-08-04  Martin Baulig  <baulig@suse.de>
+
+	* gnome-sound.h (gnome_sound_sample_new_from_cache): New func.
+	(gnome_sound_cache_add_sample): New func.
+	(gnome_sound_cache_remove_sample): New func.
+
+	* gnome-triggers.c: Re-enable this file.
+
 2001-08-03  Martin Baulig  <baulig@suse.de>
 
 	* libgnome-init.c (libbonobo_post_args_parse): Initialize the
